syntax = "proto3";

package pb;

import "usertype.proto";

// 主播基础信息
message AnchorBasic {
    // 主播id，不能跟用户id重复
    uint32 id = 1;
    // 应用id
    uint32 app_id = 2;
    // 版本号
    uint32 version = 3;
    // 工会id
    uint32 guild_id = 4;
    // 归属的区域
    uint32 area_id = 5;
    // 是否为机器人
    bool robot = 6;
    // 国家
    string country = 7;
    // 在线状态
    OnlineStatus online_status = 8;
    // 审核状态
    ReviewStatus review_status = 9;
    // profile数量
    uint32 profile_count = 10;
    // 活跃的profile数量，审核通过的
    uint32 active_count = 11;
    // 等级
    AnchorLevel level = 12;
    // 首选语言，app展示语言
    string lang = 13;
    // 支持的语言
    repeated string langs = 14;
    // 每分钟价格
    uint32 price = 15;
    // 通话收入
    uint32 call_income = 16;
    // 礼物收入
    uint32 gift_income = 17;
    // 用户充值分成
    uint32 commission_income = 18;
    // 奖惩收入
    int32 adjust_income = 19;
    // 当前余额
    uint32 balance = 20;
    // 已结算总收入
    uint32 settled = 21;
    // 上次结算时间
    uint32 settled_at = 22;
    // 粉丝数量
    uint32 fans_count = 23;
    // 通话视频id
    repeated uint64 live_ids = 24;
    // 离线时间
    uint32 offline_at = 25;
    // 封禁状态
    BlockStatus block_status = 26;
    // 上线ip
    string online_ip = 27;
    // 经度
    float longitude = 28;
    // 纬度
    float latitude = 29;
    // 创建ip
    string create_ip = 30;
    // 设备id
    uint32 device_id = 31;
    // 网络类型
    NetworkType network_type = 32;
    // 开户行
    string bank_name = 33;
    // 账户名
    string account_name = 34;
    // 银行账号
    string bank_account = 35;
    // 邮箱
    string email = 36;
    // 备注
    string note = 37;
    // 心跳时间
    uint32 heartbeat_at = 38;
    // 登录后的访问token
    string access_token = 39;
    // 访问token过期时间
    uint32 access_expire_at = 40;
    // 声网信令token
    string agora_rtm_token = 41;
    // 声网信令过期时间，unix时间戳，秒
    uint32 agora_rtm_expire_at = 42;
    // 融云token
    string rc_token = 43;
    // 融云token过期时间
    uint32 rc_expire_at = 44;

    uint32 updated_at = 60;
    uint32 created_at = 61;

    // 老toya主播id
    uint32 toya_id = 62;
    // toya同步时间
    uint32 toya_synced_at = 63;
    // toya同步状态
    ToyaStatus toya_status = 64;


    repeated AnchorProfile profiles = 100;
    // 通话视频
    repeated FileRecord lives = 101;
}

// 主播个人中心信息，一个主播可以有多套个人中心信息
message AnchorProfile {
    uint32 id = 1;
    // 应用id
    uint32 app_id = 2;
    // 区域id
    uint32 area_id = 3;
    // 主播id
    uint32 anchor_id = 4;
    // 父信息id，处于审核中的记录使用，审核通过之后会覆盖父信息
    uint32 parent_id = 5;
    // 审核状态
    ReviewStatus status = 6;
    // 语言
    string lang = 7;
    // 性别
    GenderType gender = 8;
    // 昵称
    string nickname = 9;
    // 签名
    string signature = 10;
    // 头像
    string avatar = 11;
    // 职业
    OccupationType occupation = 12;
    // 生日，unix时间戳
    uint32 birthday = 13;
    // 标签
    repeated string tags = 14;
    // 语音问候
    string voice_greeting = 15;
    // 每日经常在线起始时间，小时，0-23
    uint32 online_start = 16;
    // 每日经常在线结束时间，小时，1-24
    uint32 online_end = 17;
    // 相册文件id
    repeated uint64 photo_ids = 18;
    // 视频文件id
    repeated uint64 video_ids = 19;
    // 审核不通过原因
    string reject_reason = 20;

    uint32 updated_at = 30;
    uint32 created_at = 31;

    // 相册文件
    repeated FileRecord photos = 100;
    // 视频文件
    repeated FileRecord videos = 101;

    // 是否为老主播，仅为兼容老主播端，后续会删除
    bool is_old = 200;
}

// 在线记录
message OnlineRecord {
    uint64 id = 1;
    // 区域id
    uint32 area_id = 2;
    // 主播id
    uint32 anchor_id = 3;
    // 上线时间
    uint32 online_at = 4;
    // 在线时长
    uint32 duration = 5;
    // 离线时间
    uint32 offline_at = 6;
    // 上线ip
    string online_ip = 7;

    uint32 updated_at = 20;
    uint32 created_at = 21;
}

// 结算状态
enum SettleStatus {
    SettleUnknown = 0;
    // 预结算，计算待结算金额
    SettlePrepare = 1;
    // 结算取消
    SettleCancel = 2;
    // 结算完成，已扣除主播余额
    SettleDone = 3;
    // 撤销结算，已恢复主播余额
    SettleRevoked = 4;
}

// 结算记录
message SettleRecord {
    uint64 id = 1;
    // 区域id
    uint32 area_id = 2;
    // 工会id
    uint32 guild_id = 3;
    // 主播id
    uint32 anchor_id = 4;
    // 结算时间
    uint32 settle_at = 5;
    // 结算状态
    SettleStatus status = 6;
    // 通话收入
    uint32 call_income = 7;
    // 礼物收入
    uint32 gift_income = 8;
    // 用户充值分成
    uint32 commission_income = 9;
    // 奖惩收入
    int32 adjust_income = 10;
    // 手动调整数额，正数为加，负数扣除
    int32 adjustment = 11;
    // 实际结算收入
    uint32 settled = 12;

    uint32 updated_at = 30;
    uint32 created_at = 31;
}
